compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_with_remaining_bytes_after_variable_size.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 1874
expression: "\npub fn go(x) {\n  let n = 1\n  case x {\n    <<_:size(n), _, _:bytes>> -> 1\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let n = 1
  case x {
    <<_:size(n), _, _:bytes>> -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  let n = 1;
  if (n >= 0) {
    if (x.bitSize >= n) {
      if (x.bitSize >= 8 + n) {
        if ((x.bitSize - (8 + n)) % 8 === 0) {
          return 1;
        } else {
          return 2;
        }
      } else {
        return 2;
      }
    } else {
      return 2;
    }
  } else {
    return 2;
  }
}
