compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__const_utf16.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub const message = <<\"Hello, world!\":utf16>>\n"
---
----- SOURCE CODE

pub const message = <<"Hello, world!":utf16>>


----- COMPILED JAVASCRIPT
import { toBitArray, stringToUtf16 } from "../gleam.mjs";

export const message = /* @__PURE__ */ toBitArray([
  stringToUtf16("Hello, world!", true),
]);
