compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__const_utf32.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub const message = <<\"Hello, world!\":utf32>>\n"
---
----- SOURCE CODE

pub const message = <<"Hello, world!":utf32>>


----- COMPILED JAVASCRIPT
import { toBitArray, stringToUtf32 } from "../gleam.mjs";

export const message = /* @__PURE__ */ toBitArray([
  stringToUtf32("Hello, world!", true),
]);
