compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__discard_sized.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let assert <<_:16, _:8>> = x\n}\n"
---
import { makeError } from "../gleam.mjs";

function go(x) {
  if (!(x.length == 3)) {
    throw makeError(
      "assignment_no_match",
      "my/mod",
      3,
      "go",
      "Assignment pattern did not match",
      { value: x }
    )
  }
  if (!(x.length == 3)) {
    throw makeError(
      "assignment_no_match",
      "my/mod",
      4,
      "go",
      "Assignment pattern did not match",
      { value: x }
    )
  }
  return x;
}
