compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__dynamic_size_with_unit.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn main() {\n  let size = 3\n  <<1:size(size)-unit(2)>>\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let size = 3
  <<1:size(size)-unit(2)>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, sizedInt } from "../gleam.mjs";

export function main() {
  let size = 3;
  return toBitArray([sizedInt(1, size * 2, true)]);
}
