compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_case_utf8.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 311
expression: "\npub fn go(x) {\n  case x {\n    <<\"Gleam 👍\":utf8>> -> 1\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<"Gleam 👍":utf8>> -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x.bitSize === 80) {
    if (x.byteAt(0) === 71 &&
      x.byteAt(1) === 108 &&
      x.byteAt(2) === 101 &&
      x.byteAt(3) === 97 &&
      x.byteAt(4) === 109 &&
      x.byteAt(5) === 32 &&
      x.byteAt(6) === 240 &&
      x.byteAt(7) === 159 &&
      x.byteAt(8) === 145 &&
      x.byteAt(9) === 141) {
      return 1;
    } else {
      return 2;
    }
  } else {
    return 2;
  }
}
