compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_dynamic_bits_size.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 1051
expression: "\nfn go(x) {\n  let n = 16\n  let assert <<a:bits-size(n)>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
  let n = 16
  let assert <<a:bits-size(n)>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySlice } from "../gleam.mjs";

function go(x) {
  let n = 16;
  if (x.bitSize !== n || n <= 0) {
    throw makeError(
      "let_assert",
      "my/mod",
      4,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 27, pattern_start: 38, pattern_end: 56 }
    )
  }
  let a = bitArraySlice(x, 0, n);
  return x;
}
