compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_dynamic_size_error.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let n = 16\n  let assert <<a:size(n)>> = x\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let n = 16
  let assert <<a:size(n)>> = x
}


----- ERROR
error: Unsupported feature for compilation target
  ┌─ /src/javascript/error.gleam:4:16
  │
4 │   let assert <<a:size(n)>> = x
  │                ^^^^^^^^^

Non-constant size option in patterns is not supported for JavaScript compilation.
